--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "sf-services",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {"start": "nx serve sf-services"},
+  "scripts": {
+    "start": "concurrently --kill-others \"npm run client\" \"npm run server\"",
+    "client": "nx serve sf-services",
+    "server": "nx serve server"
+  },
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
+    "axios": "^1.0.0",
+    "express": "^4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
@@ -14,9 +20,11 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.1.0",
     "@nx/eslint-plugin": "16.1.0",
+    "@nx/express": "^16.1.0",
     "@nx/jest": "16.1.0",
     "@nx/js": "16.1.0",
     "@nx/linter": "16.1.0",
+    "@nx/node": "16.1.0",
     "@nx/react": "16.1.0",
     "@nx/webpack": "16.1.0",
     "@nx/workspace": "16.1.0",
@@ -25,6 +33,7 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -32,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-jest": "^29.4.1",
+    "concurrently": "^8.0.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -42,6 +52,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "^16.1.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
