--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
     "express": "^4.18.1",
+    "jsforce": "^1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
@@ -43,6 +44,7 @@
     "babel-jest": "^29.4.1",
     "concurrently": "^8.0.1",
     "cypress": "^12.11.0",
+    "dotenv": "^16.0.3",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
