--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SFDC_LOGIN_URL=
 SFDC_CLIENT_ID=
 SFDC_CLIENT_SECRET=
 SFDC_REDIRECT_URI=
+SFDC_API_VERSION={"label": "Spring '23", "url": "/services/data/v57.0", "version": "57.0" }
